# dune-bs

./: .gitignore  README.md  clean.bat  dune-bs-test.json  dune-project  esy.json  install.bat  package-lock.json  package.json
dune-bs-test.esy.lock/: index.json
esy.lock/: index.json
src/: dune  lib.ml  ocamlc_opt.ml
test/: a.ml  b.ml  dune
test/bin2/: d.ml  dune  e.ml
test/bin3/: dune  f.ml
test/bin4/: dune  g.re  h.re
test/lib/: c.ml  dune
